# valencia-spoon-os

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/contracts/: deploy.py  verdict_registry.manifest.json  verdict_registry.nef  verdict_registry.py  wallet.json
backend/data/verdicts/: 0865f291-c6a9-4692-bff4-2040f03b8590.json  1cfb571f-17a8-4700-9780-60bf6c910ff4.json  46a0fdcc-f36f-4067-abd0-ead309c633e3.json  8beb835e-2dd4-476e-8d89-0a23912f85ad.json  91f47016-fe9c-48e4-afb2-ca9d2ce071c3.json  b5bdf1ea-2ffb-4fc6-8289-01b861ea7ab5.json  c0fa4e7d-4f2e-4927-a10c-301c663e8f55.json  ea51666f-b954-4fa5-8fef-17995db34507.json
backend/scripts/: integration_test.py  test_server.py
backend/src/: __init__.py
backend/src/agents/: __init__.py  base_tribunal_agent.py  ethicist_agent.py  methodologist_agent.py  skeptic_agent.py  statistician_agent.py  tribunal_orchestrator.py
backend/src/api/: main.py
backend/src/api/routes/: __init__.py  interactive.py  tribunal.py  verdicts.py  voice.py
backend/src/graph/: __init__.py  nodes.py  state.py  tribunal_graph.py
backend/src/memory/: __init__.py  tribunal_memory.py
backend/src/neo/: __init__.py  neo_client.py  neo_reader.py
backend/src/storage/: __init__.py  aioz_storage.py  local_storage.py
backend/src/tools/: __init__.py  elevenlabs_voice.py  language_detector.py  paper_parser.py
backend/tests/: test_api.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
spoon-env/: pyvenv.cfg
(+23 files in other folders)
